// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders correctly 1`] = `
<div
  className="selectBox"
>
  <select
    className="element"
    name="Select"
  >
    <option
      value=""
    />
  </select>
  <span
    className="afterFormElement"
  />
</div>
`;

exports[`Select renders required correctly 1`] = `
<div
  className="selectBox required"
>
  <select
    className="element"
    name="Select"
    required={true}
  >
    <option
      value=""
    />
  </select>
  <span
    className="afterFormElement"
  />
</div>
`;
